<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        tools:context=".ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_textFieldName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/nom_beneficiare" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_textFieldBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/pr_nom_beneficiaire" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_textFieldLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/gsm" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="468dp"
            android:minHeight="60dp"
            android:text="@string/save_beneficiaire" />

    </RelativeLayout>
</layout>