<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/whole_layout_container"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activities.MainActivity">

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="Second Step"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/title_select_montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="24dp"
            android:background="@color/main_green"
            android:padding="10dp"
            android:text="Séléctionnez votre montant"
            android:textAlignment="center"
            android:textColor="#7B1FA2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName" />


        <ImageView
            android:id="@+id/btn_done"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:adjustViewBounds="true"
            android:background="@drawable/roundcorner"
            android:elevation="100dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_fees_of_transfer"
            app:srcCompat="@drawable/check" />

        <EditText
            android:id="@+id/montantInput"
            android:imeOptions="actionDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="24dp"
            android:background="#EEE"
            android:ems="10"
            android:hint="@string/entrez_votre_argent_ici"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/label_grey"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_select_montant"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/notificationTransferCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/notification_du_transfert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/montantInput" />

        <Spinner
            android:id="@+id/notifChoiceList"
            style="@style/oneInputFormSignUp"
            android:background="@drawable/search_input_home_page"
            android:entries="@array/transferFees"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationTransferCheckBox" />


        <LinearLayout
            android:id="@+id/layout_containing_final_amout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifChoiceList">

            <Button
                android:id="@+id/title_final_amount_after_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:background="@color/label_grey"
                android:padding="10dp"
                android:text="@string/your_final_amount"

                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/value_final_amount_after_fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="0DH"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_fees_of_transfer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_containing_final_amout">

        </ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>